add new functionality and improved existing one

--- a/OnlineJobPortal/src/main/resources/application.properties
+++ b/OnlineJobPortal/src/main/resources/application.properties
@@ -16,8 +16,10 @@ server.port=8080
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #colorfull terminal for spring boot logs
 spring.output.ansi.enabled=ALWAYS
-logging.level.org.springframework.security=TRACE
+#logging.level.org.springframework.security=TRACE
 
 #SECRET KEY FOR Spring security
 secret.key = ${JWT_SECRET_KEY}
+
+# swagger api
 
